  * Install /usr/lib/llvm-@LLVM_VERSION@/lib/libarcher_static.a
    /usr/lib/llvm-@LLVM_VERSION@/lib/libarcher.so in libomp-X-dev
  * Install usr/lib/llvm-@LLVM_VERSION@/lib/clang/@LLVM_VERSION_FULL@/bin/hwasan_symbolize in clang-tools-X.Y
  * Introduce python3-clang-10 (closes: #942826)
  * Remove python-lldb-10
  * Remove Python 2 deps (Closes: #945695)

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 29 Dec 2019 12:47:15 +0100

llvm-toolchain-snapshot (1:10~+201911120943210600592dd459242-1~exp1) experimental; urgency=medium

  * Repack to move to git
  * Change the versionning scheme to git:
    Infos of the last commit
    - ~+ (this syntax is to make sure that this version > ~svn)
    - date
    - hour/minute/second
    - short git hash
  * Move the checkout of the sources from svn to git
  * Use -DLLVM_ENABLE_PROJECTS instead of symlinks
  * Use -DBOOTSTRAP_LLVM_ENABLE_LTO instead of
    -DLLVM_ENABLE_LTO (not sure what it wasn't done)
  * clang: Force the installation of libclang-cpp with the exact same version
    and remove libclang as dep
  * Bunch of changes coming from the branch 9

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 12 Nov 2019 16:51:40 +0100

llvm-toolchain-snapshot (1:10~svn375339-1~exp1) experimental; urgency=medium

  * New snapshot release
  * Last upload before the move to git
  * lldb-libname.diff: disable for now, seems it that it is now handled
    by cmake https://reviews.llvm.org/D68858. TODO: check it still work
  * Remove "revert-r373786-libclang-cpp.diff" (applied upstream)
  * Add dependency between libclang-cpp => libllvm with the exact version
    (Closes: #942526)
  * Build using -DCLANG_LINK_CLANG_DYLIB=ON to force the usage of dynamic
    library instead of static library when building clang tools.
    Decreases the total size from 510M to 278M (amd64)

 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 19 Oct 2019 12:19:36 +0200

llvm-toolchain-snapshot (1:10~svn374655-1~exp1) experimental; urgency=medium
